# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  main.cpp  meson.build
assets/: green.xml  jmodl.xml
builddir/meson-logs/: meson-log.txt
include/Engine/: DOM.hpp  DevTools.hpp  Element3D.hpp  Engine.hpp  Input.hpp  Log.hpp  NKAPI.hpp  Res.hpp
include/Engine/Renderer/: Amber.hpp  Models.hpp  Renderer.hpp
include/Engine/Tools/: AssimpImporter.hpp
include/KHR/: khrplatform.h
include/glad/: glad.h
include/nuklear/: nuklear_glfw_gl3.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/lz4/: lz4_all.c
lib/tinyxml2/: tinyxml2.cpp
shaders/: basic.frag  basic.vert
src/: engine.cpp  res.cpp  threading.cpp
src/DOM/: dom.cpp
src/DevTools/: devtoolsui.cpp  log.cpp  orbitcam.cpp
src/Element3D/: element3d.cpp  meshelement3d.cpp  models.cpp
src/renderer/Amber/: amber.cpp  amber_resources.cpp
src/tools/: assimp_importer.cpp  main.cpp
subprojects/glad/: CMakeLists.txt  meson.build
subprojects/glm_lib/: CMakeLists.txt
subprojects/lz4_lib/: CMakeLists.txt
subprojects/nuklear/: CMakeLists.txt
subprojects/nuklear/nuklear/: nuklear_glfw_gl3.h
subprojects/termcolors_lib/: CMakeLists.txt
subprojects/tinyxml2_lib/: CMakeLists.txt  meson.build
tests/: IdGetTest.cpp  RenderTest.cpp  RunTest.cpp  test1.cpp
